--- a/app/src/main/res/layout/view_book.xml
+++ b/app/src/main/res/layout/view_book.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<com.leandrofavarin.books.feature.library.BookView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -41,4 +41,4 @@
         android:background="@color/colorPrimary"
         />
 
-</LinearLayout>
+</com.leandrofavarin.books.feature.library.BookView>
